Massive commit including the ancestry distribution, many display updates, updated release scripts, new REST API version (1.7) and restructure some of the Django modules/templates (#181)
- Ancestry distribution
- Conversion to D3 chart library
- Update release script
- new REST API version (1.7)
- restrucuture some of the Django modules and templates
- update release scripts
- update documentation
